Updated JavaScript code structure and fixed reset button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <p class="form__label">
                     <button type="submit" class="form__button">Przelicz!</button>
-                    <button type="button" class="form__button js-clear">Wyczyść</button>
+                    <button type="reset" class="form__button js-clear">Wyczyść</button>
                 </p>
             </fieldset>
         </form>
